# sublThemer

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  sublThemer.sublime-project  test.dark
src/sublThemer/: ColorScheme.py  Settings.py  cli.py
